<?xml version="1.0" encoding="utf-8"?>
<merge android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="图标" android:textAllCaps="false" />
        <TextView android:textColor="@android:color/black" android:layout_gravity="center" android:id="@id/title_child_protect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_child_protect" />
    </LinearLayout>
    <TextView android:textColor="@android:color/black" android:id="@id/title_child_lock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/title_child_lock" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_unlock_all" android:background="#3f3f3f3f" android:layout_width="0.0dip" android:layout_height="77.0dip" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unlock_all" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:background="#3f3f3f3f" android:layout_width="0.0dip" android:layout_height="77.0dip" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_all" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:background="#3f3f3f3f" android:layout_width="0.0dip" android:layout_height="77.0dip" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exclusive_child_lock" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <TextView android:textColor="@android:color/black" android:id="@id/title_baby_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/title_baby_mode" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="#3f3f3f3f" android:layout_width="0.0dip" android:layout_height="107.0dip" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/baby_into_car_widget" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:background="#3f3f3f3f" android:layout_width="0.0dip" android:layout_height="107.0dip" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/baby_sleep_well_widget" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</merge>