<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/card_trip_root" android:tag="layout/layout_new_card_trip_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_card_icon" android:layout_width="28.0dip" android:layout_height="28.0dip" android:layout_marginTop="@dimen/card_content_space_top" android:src="@drawable/card_trip_icon" android:scaleType="centerInside" android:layout_marginStart="32.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/card_text_title" android:textColor="@color/new_card_text_value_color" android:id="@id/tv_card_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_content_space_top" android:text="@string/new_card_trip_title" android:layout_marginStart="10.0dip" app:layout_constraintStart_toEndOf="@id/iv_card_icon" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/card_text_trip_menu" android:textColor="@color/new_card_text_color" android:gravity="center" android:id="@id/card_trip_dis_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/trips_distance" android:layout_marginStart="32.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_card_icon" />
    <TextView android:textSize="@dimen/card_text_trip_value" android:textColor="@color/new_card_text_value_color" android:id="@id/card_trip_total_mileage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" app:layout_constraintStart_toStartOf="@id/card_trip_dis_desc" app:layout_constraintTop_toBottomOf="@id/card_trip_dis_desc" />
    <TextView android:textSize="@dimen/card_text_trip_unit" android:textColor="@color/new_card_text_color" android:gravity="center" android:id="@id/card_trip_dis_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_drive_score_km" app:layout_constraintStart_toStartOf="@id/card_trip_dis_desc" app:layout_constraintTop_toBottomOf="@id/card_trip_total_mileage" />
    <TextView android:textSize="@dimen/card_text_trip_menu" android:textColor="@color/new_card_text_color" android:id="@id/card_trip_avg_energy_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trips_avg_energy" app:layout_constraintEnd_toStartOf="@id/card_trip_duration_desc" app:layout_constraintStart_toEndOf="@id/card_trip_dis_desc" app:layout_constraintTop_toTopOf="@id/card_trip_dis_desc" />
    <TextView android:textSize="@dimen/card_text_trip_value" android:textColor="@color/new_card_text_value_color" android:id="@id/card_trip_avg_energy_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_total_mileage" app:layout_constraintStart_toStartOf="@id/card_trip_avg_energy_desc" app:layout_constraintTop_toBottomOf="@id/card_trip_avg_energy_desc" />
    <TextView android:textSize="@dimen/card_text_trip_unit" android:textColor="@color/new_card_text_color" android:id="@id/card_trip_avg_energy_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_trip_data_space_top" android:text="@string/card_kwh_unit" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_dis_unit" app:layout_constraintStart_toStartOf="@id/card_trip_avg_energy_value" app:layout_constraintTop_toBottomOf="@id/card_trip_avg_energy_value" />
    <TextView android:textSize="@dimen/card_text_trip_menu" android:textColor="@color/new_card_text_color" android:id="@id/card_trip_duration_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trips_elapsed_time" android:layout_marginEnd="32.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/card_trip_dis_desc" />
    <TextView android:textSize="@dimen/card_text_trip_value" android:textColor="@color/new_card_text_value_color" android:id="@id/card_trip_duration_hour" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_avg_energy_value" app:layout_constraintStart_toStartOf="@id/card_trip_duration_desc" app:layout_constraintTop_toBottomOf="@id/card_trip_duration_desc" />
    <TextView android:textSize="@dimen/card_text_trip_unit" android:textColor="@color/new_card_text_color" android:id="@id/card_trip_duration_hour_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_drive_score_h" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_avg_energy_unit" app:layout_constraintStart_toStartOf="@id/card_trip_duration_hour" app:layout_constraintTop_toBottomOf="@id/card_trip_duration_hour" />
</androidx.constraintlayout.widget.ConstraintLayout>