<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/card_trip_root" android:tag="layout/layout_card_trip_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_segment_space_top"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.zeekr.component.segement.ZeekrCardSegment android:layout_gravity="center" android:id="@id/toggle_trip_switch" android:layout_width="fill_parent" android:layout_height="@dimen/card_segment_h" android:layout_marginStart="@dimen/card_content_space_start" android:layout_marginEnd="@dimen/card_content_space_start" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/card_text_trip_menu" android:textColor="@color/card_text_color_alpha" android:ellipsize="end" android:id="@id/card_trip_duration_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="@dimen/card_trip_desc_max_width" android:text="@string/trips_elapsed_time" android:maxLines="2" app:layout_constraintStart_toStartOf="@id/toggle_trip_switch" app:layout_constraintTop_toTopOf="@id/card_trip_avg_energy_desc" />
    <TextView android:textSize="@dimen/card_text_trip_value" android:textColor="@color/card_text_color" android:id="@id/card_trip_duration_hour" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_total_mileage" app:layout_constraintStart_toStartOf="@id/card_trip_duration_desc" app:layout_constraintTop_toBottomOf="@id/card_trip_duration_desc" />
    <TextView android:textSize="@dimen/card_text_trip_unit" android:textColor="@color/card_text_color_alpha" android:id="@id/card_trip_duration_hour_unit" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_drive_score_h" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_duration_hour" app:layout_constraintStart_toEndOf="@id/card_trip_duration_hour" />
    <TextView android:textSize="@dimen/card_text_trip_value" android:textColor="@color/card_text_color" android:id="@id/card_trip_duration_min" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_total_mileage" app:layout_constraintStart_toEndOf="@id/card_trip_duration_hour_unit" />
    <TextView android:textSize="@dimen/card_text_trip_unit" android:textColor="@color/card_text_color_alpha" android:id="@id/card_trip_duration_min_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_drive_score_min" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_duration_min" app:layout_constraintStart_toEndOf="@id/card_trip_duration_min" />
    <TextView android:textSize="@dimen/card_text_trip_menu" android:textColor="@color/card_text_color_alpha" android:ellipsize="end" android:id="@id/card_trip_dis_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trips_distance" android:maxLines="2" app:layout_constraintEnd_toStartOf="@id/card_trip_avg_energy_desc" app:layout_constraintStart_toEndOf="@id/card_trip_duration_desc" app:layout_constraintTop_toTopOf="@id/card_trip_avg_energy_desc" />
    <TextView android:textSize="@dimen/card_text_trip_value" android:textColor="@color/card_text_color" android:id="@id/card_trip_total_mileage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_avg_energy_value" app:layout_constraintStart_toStartOf="@id/card_trip_dis_desc" />
    <TextView android:textSize="@dimen/card_text_trip_unit" android:textColor="@color/card_text_color_alpha" android:gravity="center" android:id="@id/card_trip_dis_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_drive_score_km" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_total_mileage" app:layout_constraintStart_toEndOf="@id/card_trip_total_mileage" />
    <TextView android:textSize="@dimen/card_text_trip_menu" android:textColor="@color/card_text_color_alpha" android:ellipsize="end" android:id="@id/card_trip_avg_energy_desc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_trip_content_space_top" android:text="@string/trips_avg_energy" android:maxLines="2" app:layout_constraintEnd_toEndOf="@id/toggle_trip_switch" app:layout_constraintStart_toStartOf="@id/card_trip_avg_energy_value" app:layout_constraintTop_toBottomOf="@id/toggle_trip_switch" />
    <TextView android:textSize="@dimen/card_text_trip_value" android:textColor="@color/card_text_color" android:id="@id/card_trip_avg_energy_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" android:layout_marginStart="@dimen/card_trip_avg_energy_space_start" app:layout_constraintBaseline_toBaselineOf="@id/card_trip_avg_energy_unit" app:layout_constraintStart_toStartOf="@id/toggle_trip_switch" />
    <TextView android:textSize="@dimen/card_text_trip_unit" android:textColor="@color/card_text_color_alpha" android:id="@id/card_trip_avg_energy_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_kwh_unit" app:layout_constraintStart_toEndOf="@id/card_trip_avg_energy_value" app:layout_constraintTop_toBottomOf="@id/card_trip_avg_energy_desc" />
    <View android:id="@id/view_click_area" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/toggle_trip_switch" />
</androidx.constraintlayout.widget.ConstraintLayout>