<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/customize_scenarios_card_tip_text_size" android:textColor="@color/customize_scenarios_card_item_color" android:layout_gravity="center" android:id="@id/tvToLogin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customize_scenario_to_login" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/layoutToAdd" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/ivToAddEmptyIcon" android:layout_width="@dimen/customize_scenarios_empty_data_emptyicon_width_h" android:layout_height="@dimen/customize_scenarios_empty_data_emptyicon_width_h" android:src="@drawable/empty_to_create" />
        <TextView android:textSize="@dimen/customize_scenarios_empty_data_totips_size" android:textColor="@color/customize_scenario_no_scene" android:id="@id/tvToAddTips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/customize_scenarios_empty_data_tocreate_padding_top" android:text="@string/no_scene" />
        <TextView android:textSize="@dimen/customize_scenarios_empty_data_tocreate_size" android:textColor="@color/customize_scenario_color_go_create_txt" android:gravity="center" android:id="@id/tvToAdd" android:background="@drawable/shape_go_add_selector" android:layout_width="@dimen/customize_scenarios_card_empty_data_btn_width" android:layout_height="@dimen/customize_scenarios_card_empty_data_btn_height" android:layout_marginTop="@dimen/customize_scenarios_empty_data_tocreate_padding_top" android:text="@string/customize_scenario_to_add" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/layoutToCreate" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/ivToCreateEmptyIcon" android:layout_width="@dimen/customize_scenarios_empty_data_emptyicon_width_h" android:layout_height="@dimen/customize_scenarios_empty_data_emptyicon_width_h" android:src="@drawable/empty_to_create" />
        <TextView android:textSize="@dimen/customize_scenarios_empty_data_totips_size" android:textColor="@color/customize_scenario_no_scene" android:id="@id/tvToCreateTips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/customize_scenarios_empty_data_totips_top" android:text="@string/no_scene" />
        <TextView android:textSize="@dimen/customize_scenarios_empty_data_tocreate_size" android:textColor="@color/customize_scenario_color_go_create_txt" android:gravity="center" android:id="@id/tvToCreate" android:background="@drawable/shape_go_add_selector" android:layout_width="@dimen/customize_scenarios_card_empty_data_btn_width" android:layout_height="@dimen/customize_scenarios_card_empty_data_btn_height" android:layout_marginTop="@dimen/customize_scenarios_empty_data_tocreate_padding_top" android:text="@string/customize_scenario_to_create" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/layoutVisitorModel" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/ivVisitorModelIcon" android:layout_width="@dimen/customize_scenarios_empty_data_emptyicon_width_h" android:layout_height="@dimen/customize_scenarios_empty_data_emptyicon_width_h" android:src="@drawable/empty_to_create" />
        <TextView android:textSize="@dimen/customize_scenarios_empty_data_totips_size" android:textColor="@color/customize_scenario_no_scene" android:id="@id/tvVisitorModelTips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/customize_scenarios_empty_data_tocreate_padding_top" android:text="@string/visitor_mode_unavailable" />
    </LinearLayout>
</FrameLayout>